# house-padi-engine

./: .gitignore  LEASING_FLOW.md  main.py  pyproject.toml  repomix-output.xml  system_container.py  test_system.py
agent_engine/: graph.py  orchestrator.py  prompts.json  registry.py  utils.py
data_layer/: mcp_application.py  mcp_discovery.py  mcp_lease.py  mcp_oracle.py  mcp_property.py  mcp_tour.py  mcp_transaction.py  mcp_user.py  permissions.py  schema.sql  tool_validators.py  vector_service.py
data_layer/schemas/: add_property_input.py  apply_for_property_input.py  orchestrator_client_response.py
middleware/: auth_gateway.py
supabase/: config.toml
supabase/migrations/: 20260607092327_init_schema.sql  20260607132816_update_properties_schema.sql  20260608_add_applications_and_leases.sql
tests/: search_test.py  test_voice_pipeline.py
utils/: model_manager.py
voice_engine/: stream_handler.py  tts_client.py
