[project]
name = "house-padi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langchain-xai>=1.2.2",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "supabase>=2.31.0",
]
